Fix LoC preview on iOS. Fixes #224.

--- a/frontend/sass/styles.scss
+++ b/frontend/sass/styles.scss
@@ -142,9 +142,20 @@ input:focus + .jf-checkbox-symbol {
     flex: 1;
 }
 
-.jf-loc-preview iframe {
+.jf-loc-preview.box {
+    padding: 8px;
+}
+
+.jf-loc-preview iframe[scrolling="no"] {
+    display: block;
     width: 100%;
-    min-height: 20em;
+    // Note that the enclosed document inside the IFRAME needs to
+    // have this max-height set; all scrolling will actually be
+    // part of the enclosing document, rather than the IFRAME
+    // wrapper, to work around the unusual behavior of iOS to
+    // always set IFRAME dimensions to the contents of their
+    // document.
+    height: 300px;
 }
 
 .jf-is-extra-wide {
